Got rid of '-greater' suffix on mel/syd files.

--- a/html/postcodes-mel.html
+++ b/html/postcodes-mel.html
@@ -8,10 +8,10 @@
     </style>
     <script src="../jvectormap/tests/assets/jquery-1.7.2.min.js"></script>
     <script src="../jvectormap/jquery-jvectormap.js"></script>
-    <script src="../data-generated/postcodes-syd-greater.js"></script>
+    <script src="../data-generated/postcodes-mel.js"></script>
     <script>
       $(function(){
-        $('#map').vectorMap({map: 'postcodes-syd-greater_en'});
+        $('#map').vectorMap({map: 'postcodes-mel_en'});
       })
     </script>
   </head>
