--- a/html/postcodes-syd.html
+++ b/html/postcodes-syd.html
@@ -8,10 +8,10 @@
     </style>
     <script src="../jvectormap/tests/assets/jquery-1.7.2.min.js"></script>
     <script src="../jvectormap/jquery-jvectormap.js"></script>
-    <script src="../data-generated/suburbs-syd-greater.js"></script>
+    <script src="../data-generated/postcodes-syd.js"></script>
     <script>
       $(function(){
-        $('#map').vectorMap({map: 'suburbs-syd-greater_en'});
+        $('#map').vectorMap({map: 'postcodes-syd_en'});
       })
     </script>
   </head>
