--- a/html/suburbs-mel.html
+++ b/html/suburbs-mel.html
@@ -8,10 +8,10 @@
     </style>
     <script src="../jvectormap/tests/assets/jquery-1.7.2.min.js"></script>
     <script src="../jvectormap/jquery-jvectormap.js"></script>
-    <script src="../data-generated/suburbs-mel-greater.js"></script>
+    <script src="../data-generated/suburbs-mel.js"></script>
     <script>
       $(function(){
-        $('#map').vectorMap({map: 'suburbs-mel-greater_en'});
+        $('#map').vectorMap({map: 'suburbs-mel_en'});
       })
     </script>
   </head>
